--- a/plugin/index.html
+++ b/plugin/index.html
@@ -4,11 +4,33 @@
 <head>
   <meta charset="UTF-8">
   <title>Untitled Document</title>
+  <style>
+    .video-js {
+      height: 344px;
+      width: 610px;
+    }
+  </style>
+  <link href="ad-countdown.css" rel="stylesheet">
 </head>
 
 <body>
 
+  <video-js id="myPlayerID" data-video-id="5622718636001"
+  data-account="1507807800001"
+  data-player="ryFwquPUM"
+  data-embed="default"
+  data-application-id
+  class="video-js"
+  controls></video-js>
+  <script src="https://players.brightcove.net/1507807800001/ryFwquPUM_default/index.min.js"></script>
+  <script src="ad-countdown.js"></script>
 
+  <script type="text/javascript">
+    videojs('myPlayerID').ready(function(){
+      var myPlayer = this;
+      myPlayer.adCountdown();
+    });
+  </script>
 
 </body>
 
