--- a/plugin/index.html
+++ b/plugin/index.html
@@ -4,34 +4,30 @@
 <head>
   <meta charset="UTF-8">
   <title>Untitled Document</title>
-  <style>
-    .video-js {
-      height: 344px;
-      width: 610px;
-    }
-  </style>
+  <link href="https://players.brightcove.net/videojs-overlay/2/videojs-overlay.css" rel='stylesheet'>
   <link href="ad-countdown.css" rel="stylesheet">
 </head>
 
 <body>
+  <video-js id="myPlayerID"
+    data-video-id="4607357817001"
+    data-account="1752604059001"
+    data-player="NqheO14Tj"
+    data-embed="default"
+    data-application-id
+    class="video-js"
+    controls
+    width="640"
+    height="360"></video-js>
 
-  <video-js id="myPlayerID" data-video-id="5622718636001"
-  data-account="1507807800001"
-  data-player="ryFwquPUM"
-  data-embed="default"
-  data-application-id
-  class="video-js"
-  controls></video-js>
-  <script src="https://players.brightcove.net/1507807800001/ryFwquPUM_default/index.min.js"></script>
+  <script src="//players.brightcove.net/1752604059001/NqheO14Tj_default/index.min.js"></script>
+  <script src="https://players.brightcove.net/videojs-overlay/2/videojs-overlay.min.js"></script>
   <script src="ad-countdown.js"></script>
-
-  <script type="text/javascript">
-    videojs('myPlayerID').ready(function(){
+  <script>
+    videojs.getPlayer('myPlayerID').ready(function() {
       var myPlayer = this;
       myPlayer.adCountdown();
     });
-  </script>
-
-</body>
+  </script></body>
 
 </html>
